<resources>
    <string name="app_name">Animal Quiz App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_one_text">Animal 1</string>
    <string name="question_text">This is question %1$d out of %2$d</string>
    <string name="key_number_of_guesses">KEY_NUMBER_OF_GUESSES</string>
    <string name="number_of_guesses_title">Number Of Guesses</string>
    <string name="number_of_guesses_summary">show 2, 4 or 6 guess options</string>
    <string name="key_types_of_animals">KEY_TYPES_OF_ANIMALS</string>
    <string name="types_of_animals_text">Types Of Animals</string>
    <string name="types_of_animals_summary">choose types of animals</string>
    <string name="key_background_color">KEY_BACKGROUND_COLOR</string>
    <string name="background_color_title">Background Color</string>
    <string name="background_color_summary">choose background color</string>
    <string name="key_font">KEY_FONT</string>
    <string name="font_title">Fonts</string>
    <string name="font_summary">choose font</string>
    <string name="default_font">allura.otf</string>
    <string name="progress_dialog_text">You are %1$.2f%% correct out of %2$d questions.</string>
    <string name="setting_changed_text">setting changed</string>
</resources>